[package]
name = "vege_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json", "blocking"]}
serde_json = "*"
serde_derive = "*"
serde = "*"
itertools = "0.10.3"
sha2 = "0.10.1"
rsa = "0.5.0"
base64 = "*"
hmac = "0.12.0"
rand = "*"
aes = { version = "0.7.5", optional = true }
